font fixes started working on mobile layout

--- a/Pages/home-style.css
+++ b/Pages/home-style.css
@@ -6,12 +6,12 @@ Author: mozahzah
 
 * /* Global */
 {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
+    font-family: "Assistant", sans-serif;
+    font-optical-sizing: none;
+    font-weight: 200;
     font-style: normal;
-    text-align: justify;
-    letter-spacing: 2px;
+    letter-spacing: 0.8px;
+    line-height: 1.5;
     font-size: 16px;
     color: #e0e0e0be;
     word-wrap: break-word;
@@ -19,47 +19,17 @@ Author: mozahzah
     scroll-behavior: smooth;
 }
 
-
-/* Headers */
-
-
-h1
+#spotlight 
 {
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 100;
-  font-style: normal;
-  letter-spacing: 6px;
-  padding: 0;
-  margin: 0;
-  font-size: 42px;
+    position: absolute;
+    width: 600px; 
+    height: 600px;
+    background: radial-gradient(circle, #e509140a 0%, rgba(255, 255, 255, 0) 70%);
+    pointer-events: none;
+    border-radius: 50%;
+    mix-blend-mode: normal;
+    transform: translate(-50%, -50%);
 }
-
-h2
-{
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  padding: 0;
-  margin: 0;
-  font-size: 24px;
-}
-
-h3
-{
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  padding: 0;
-  margin: 0;
-  font-size: 22px;
-}
-
-
-/* Body and Background */
-
 
 #loader-container 
 {
@@ -123,6 +93,48 @@ h3
   }
 }
 
+
+/* Headers */
+
+
+h1
+{
+  font-family: "Assistant", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+  letter-spacing: 6px;
+  padding: 0;
+  margin: 0;
+  font-size: 42px;
+}
+
+h2
+{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  padding: 0;
+  margin: 0;
+  font-size: 26px;
+}
+
+h3
+{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+  padding: 0;
+  margin: 0;
+  font-size: 26px;
+}
+
+
+/* Body and Background */
+
+
 body 
 {
     margin: 0;
@@ -141,7 +153,7 @@ body
     height: 2160px;
     pointer-events: none;
     opacity: 20%;
-    z-index: -1;
+    z-index: -2;
 }
 
 
@@ -155,6 +167,7 @@ body
     flex-direction: row;
     align-items: start;
     justify-content: end;
+    padding-right: 10%;
 }
 
 #fixed-info-section
@@ -170,8 +183,12 @@ body
 
 #main-nav
 {
-  margin-top: 10%;
+  margin-top: 20%;
 }
+
+
+/* Social Links */
+
 
 #social-links
 {
@@ -180,16 +197,6 @@ body
   flex-direction: row;
 }
 
-#content-section
-{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding-right: 10%;
-    gap: 10px;
-}
-  
 ul 
 {
   list-style: none;
@@ -216,7 +223,12 @@ a
 
 a:hover 
 {
-  color: #ff0000;
+  color: #E50914;
+}
+
+a:active
+{
+  color: #E50914;
 }
 
 li span:first-child 
@@ -224,7 +236,7 @@ li span:first-child
   display: block;
   width: 100%;
   height: 2px;
-  background-color: #ff0000; 
+  background-color: #E50914;
   margin-bottom: 5px; 
   transition: transform 0.3s ease;
   transform: scaleX(0);
@@ -275,6 +287,28 @@ a:hover span:first-child
 }
 
 
+/* Content Section */
+
+
+#content-section
+{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding-right: 10%;
+    gap: 10px;
+}
+
+.content-sub-section
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
 /* About Section */
 
 
@@ -297,7 +331,7 @@ a:hover span:first-child
 
 .project-container 
 {
-  background-color:  rgba(58, 19, 19, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: row;
   transition: transform 0.3s ease;
@@ -312,40 +346,28 @@ a:hover span:first-child
   cursor: pointer;
 }
 
-.sub-section
-{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.sub-section-sidebar
-{
-  width: 30%;
-}
-
 .sub-section-text-block
 {
   width: 70%;
-  margin-left: 8%;
+  margin-left: 5%;
   display: flex;
   flex-direction: column;
 }
 
+.image-wrapper
+{
+  width: 150px;
+  height: auto;
+  overflow: hidden;
+  border-radius: 10px;
+  border-color: #ffffff10;
+  border-width: 2px;
+  border-style: solid;
+  display: flex;
+  align-items: center;
+}
+
 .project-image
-{
-  width: 100%;
-  height: 100%;
-}
-
-.project-button
-{
-  width: 10%;
-  height: 10%;
-}
-
-.project-description
 {
   width: 100%;
 }
@@ -371,19 +393,27 @@ a:hover span:first-child
     }
 }
 
-@media screen and (min-width: 601px) 
-{
-
-}
 @media screen and (max-width: 600px) 
 {
+  #main-section
+  {
+    display: flex;
+    flex-direction: column;
+  }
 
-}
-@media screen and (min-width: 601px) 
-{
+  #fixed-info-section
+  {
+    width: 30%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    position: static;
+    padding-left: 10%;
+  }
 
-}
-@media screen and (max-width: 600px) 
-{
-
+  #content-section
+  {
+    width: 100%;
+  }
 }
